# sast

./: .gitignore  CODE_REVIEW.md  CODE_REVIEW_SUMMARY.md  Cargo.toml  DEEP_CODE_REVIEW.md  DEEP_CODE_REVIEW_ANALYSIS.md  Dockerfile  EXECUTIVE_SUMMARY.txt  GETTING_STARTED.md  PROJECT_SUMMARY.md  README.md  sanity_check.sh  test_arena_parser.rs  test_call_graph.ts  test_kql_e2e.rs  test_results.json  test_symbol_table.ts
benches/: README.md  analyzer_benchmark.rs  parser_benchmark.rs  query_benchmark.rs  taint_analysis_benchmark.rs
config/suites/: security-comprehensive.yaml  security-default.yaml  security-extended.yaml
crates/analyzer/: Cargo.toml
crates/analyzer/src/: access_path.rs  call_context.rs  call_graph.rs  cfg.rs  collection_ops.rs  content.rs  dataflow.rs  dataflow_node.rs  flow_summary.rs  interprocedural_taint.rs  language_handler.rs  lib.rs  points_to.rs  ssa.rs  symbol_table.rs  symbolic.rs  taint.rs  taint_ast_based.rs  taint_config.rs  taint_pipeline.rs  type_system.rs  yaml_config.rs
crates/analyzer/src/interprocedural_taint/: ast_helpers.rs  collection_tracking.rs  mod.rs  sanitizer_handling.rs  source_sink.rs  symbolic_eval.rs  taint_checks.rs  traversal.rs
crates/analyzer/src/interprocedural_taint/node_handlers/: assignments.rs  calls.rs  control_flow.rs  functions.rs  mod.rs
crates/analyzer/tests/: call_graph_tests.rs  cfg_construction_tests.rs  go_taint_test.rs  interprocedural_test.rs  java_taint_test.rs  php_taint_test.rs  points_to_test.rs  predicated_taint_basic_test.rs  ruby_taint_test.rs  rust_taint_test.rs  swift_taint_test.rs  symbolic_execution_tests.rs  taint_integration_test.rs
crates/cache/: Cargo.toml
crates/cache/.gittera/: baseline.json
crates/cache/.kodecd/: baseline.json
crates/cache/src/: analysis_cache.rs  baseline.rs  cache.rs  fingerprint.rs  lib.rs  lifecycle.rs  suppression.rs
crates/cache/tests/: baseline_tests.rs  incremental_tests.rs  suppression_tests.rs
crates/parser/: ARENA_AST.md  Cargo.toml
crates/parser/benches/: memory_bench.rs
crates/parser/src/: ast.rs  ast_arena.rs  language.rs  lib.rs  parser.rs  parser_arena.rs  visitor.rs
crates/parser/tests/: class_tests.rs  control_flow_tests.rs  debug_typescript.rs  expression_tests.rs  module_system_tests.rs  object_array_tests.rs  pattern_tests.rs  proptest_parser.rs  typescript_tests.rs
crates/query/: Cargo.toml
crates/query/src/: ast.rs  cwe.rs  executor.rs  extended_stdlib.rs  lexer.rs  lib.rs  metadata.rs  owasp_rules.rs  parser.rs  stdlib.rs
crates/query/src/languages/: java.rs  javascript.rs  mod.rs  python.rs  ruby.rs  universal.rs
crates/query/tests/: integration_test.rs
crates/reporter/: Cargo.toml
crates/reporter/src/: formats.rs  lib.rs  sarif.rs
crates/reporter/tests/: format_tests.rs  sarif_tests.rs
docs/: ARCHITECTURE.md  ARENA_PARSER_COMPLETE.md  AST_EXPANSION_PHASES_1_7_COMPLETE.md  AST_EXPANSION_PLAN.md  BUILT_IN_QUERIES_REFERENCE.md  CALL_GRAPH_COMPLETE.md  CALL_GRAPH_GUIDE.md  CODE_REVIEW.md  CODE_REVIEW_ACTION_PLAN.md  CODE_REVIEW_IMPROVEMENTS.md  CODE_REVIEW_NEW.md  COMPETITIVE_ANALYSIS.md  CWE_COVERAGE_SUMMARY.md  ENHANCED_AST_SUMMARY.md  EXECUTIVE_SUMMARY.txt  EXTENDED_QUERY_LIBRARY.md  FEATURES_COMPREHENSIVE.md  GETTING_STARTED.md  GQL_GUIDE.md  GQL_QUICK_REFERENCE.md  HOW_IT_WORKS.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_SUMMARY.md  INTEGRATIONS.md  INTEGRATION_COMPLETE.md  INTEGRATION_TEST_SUMMARY.md  KODECD_VS_CODEQL_COMPARISON.md  KQL_COMPLETE.md  KQL_GUIDE.md  KQL_QUICK_REFERENCE.md  LANGUAGE_SUPPORT.md  PARSER_CODE_REVIEW_IMPROVEMENTS.md  PHASE1_CONTROL_FLOW_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_EXPRESSIONS_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_PATTERNS_COMPLETE.md  PHASE4_OBJECT_ARRAY_COMPLETE.md  POINTS_TO_ANALYSIS_GUIDE.md  POINTS_TO_IMPLEMENTATION_SUMMARY.md  (+20 more)
examples/vulnerable-code/: sql_injection.py
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_parser.rs  fuzz_query.rs  fuzz_taint_analysis.rs
gemini_tests/: README.md
gemini_tests/go/: cgi_usage.go  defer_exit.go  empty_struct_mutex.go  hardcoded_secret_variant.go  insecure_temp.go  insecure_tls.go  manual_gc.go  missing_timeout.go  path_traversal.go  redos.go  ssrf.go  time_after_leak.go  unescaped_template.go  xss.go  zip_slip.go
gemini_tests/java/: CommandInjection.java  CommandInjectionProcessBuilder.java  FinalizeImplementation.java  HardcodedFilepath.java  HardcodedPassword.java  InsecureCipher.java  InsecureFilePermissions.java  InsecureRandom.java  InsecureSocketFactory.java  InsecureTempFile.java  LdapInjection.java  MutableStaticField.java  PathTraversal.java  PublicCloneable.java  SqlInjectionJpa.java  SystemExit.java  TrustAllCertificates.java  XpathInjection.java  XssServlet.java
gemini_tests/javascript/: command_injection.js  insecure_cookie.js  insecure_cors.js  insecure_deserialization.js  insecure_random.js  missing_security_headers.js  prototype_pollution.js  redos.js  spawn_shell.js  xss_express.js
gemini_tests/python/: assert_used.py  command_injection.py  command_injection_os_system.py  command_injection_subprocess.py  csrf_flask_no_csrf.py  insecure_deserialization_yaml.py  insecure_hash_md5.py  insecure_hash_sha1.py  insecure_random.py  insecure_temp_file.py  sql_injection.py  sql_injection_flask_sqlalchemy.py  sql_injection_raw.py  ssrf.py  ssrf_requests.py  unsafe_redirect_flask.py  xml_external_entity_injection.py  xss_django.py  xxe.py
models/: schema.yaml
models/csharp/: core.yaml
models/go/: core.yaml
models/java/: core.yaml
queries/: command-injection.gql  sql-injection.gql  xss.kql
scripts/: bandit_to_benchmark.py  benchmark_all.sh  benchmark_baseline.json  benchmark_score.py  codeql_to_benchmark.py  run_benchmarks.sh  semgrep_to_benchmark.py
smoke_tests/: README.md
src/: discovery.rs  main.rs  parallel.rs
tests/: README.md  cache_workflow_integration_test.rs  cli_tests.rs  integration_tests.rs  parallel_analysis_test.rs  test_arena_parser.rs  test_clean.ts  test_gql_e2e.rs  test_interprocedural.ts  test_kql_e2e.rs  test_parser.rs  test_taint_analysis.ts  test_vulnerabilities.ts
(+543 files in other folders)
