[package]
name = "kodecd-sast"
version = "0.1.0"
edition = "2021"
authors = ["KodeCD Team"]
description = "A high-performance SAST engine with custom query language"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "crates/parser",
    "crates/analyzer",
    "crates/query",
    "crates/reporter",
]

[dependencies]
# Core dependencies for the main binary
kodecd-parser = { path = "crates/parser" }
kodecd-analyzer = { path = "crates/analyzer" }
kodecd-query = { path = "crates/query" }
kodecd-reporter = { path = "crates/reporter" }

# CLI and utilities
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Multi-file analysis
rayon = "1.10"
walkdir = "2.5"
ignore = "0.4"
indicatif = "0.17"
glob = "0.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "parser_benchmark"
harness = false

[[bench]]
name = "query_benchmark"
harness = false

[[bench]]
name = "taint_analysis_benchmark"
harness = false
