[package]
name = "gittera-sast"
version = "0.1.0"
edition = "2021"
authors = ["Gittera Team"]
description = "A high-performance SAST engine with custom query language"
license = "Proprietary"

[workspace]
members = [
    "crates/parser",
    "crates/analyzer",
    "crates/query",
    "crates/reporter",
    "crates/cache",
]

[dependencies]
# Core dependencies for the main binary
gittera-parser = { path = "crates/parser" }
gittera-analyzer = { path = "crates/analyzer" }
gittera-query = { path = "crates/query" }
gittera-reporter = { path = "crates/reporter" }
gittera-cache = { path = "crates/cache" }

# CLI and utilities
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Multi-file analysis
rayon = "1.10"
walkdir = "2.5"
ignore = "0.4"
indicatif = "0.17"
glob = "0.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"
tempfile = "3.13"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "parser_benchmark"
harness = false

[[bench]]
name = "query_benchmark"
harness = false

[[bench]]
name = "taint_analysis_benchmark"
harness = false
