[package]
name = "gittera-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
gittera-parser = { path = "../parser" }

# Graph data structures for CFG
petgraph = "0.6"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
indexmap = "2.6"
dashmap = "6.1"

[dev-dependencies]
criterion = "0.5"
