[package]
name = "kodecd-cache"
version = "0.1.0"
edition = "2021"
authors = ["KodeCD Team"]
description = "Caching and incremental analysis for KodeCD SAST"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
kodecd-query = { path = "../query" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Hashing and crypto
sha2 = "0.10"
blake3 = "1.5"

# File system
walkdir = "2.5"
ignore = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

[dev-dependencies]
tempfile = "3.12"
