[package]
name = "gittera-cache"
version = "0.1.0"
edition = "2021"
authors = ["Gittera Team"]
description = "Caching and incremental analysis for Gittera SAST"
license = "Proprietary"

[dependencies]
# Core dependencies
gittera-query = { path = "../query" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Hashing and crypto
sha2 = "0.10"
blake3 = "1.5"

# File system
walkdir = "2.5"
ignore = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

[dev-dependencies]
tempfile = "3.12"
