[package]
name = "gittera-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
# Tree-sitter core and language grammars
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-swift = "0.6"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-scala = "0.24"
tree-sitter-groovy = "0.1.2"
tree-sitter-lua = "0.2"
tree-sitter-perl = { git = "https://github.com/tree-sitter-perl/tree-sitter-perl.git", branch = "release" }
tree-sitter-language = "0.1"

# Utilities
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
walkdir = "2.5"

# Memory optimization
bumpalo = { version = "3.16", features = ["collections"] }

[dev-dependencies]
tempfile = "3.13"
proptest = "1.5"
