[package]
name = "kodecd-query"
version = "0.1.0"
edition = "2021"

[dependencies]
kodecd-parser = { path = "../parser" }
kodecd-analyzer = { path = "../analyzer" }

# Parsing KQL
nom = "7.1"
logos = "0.14"

# Utilities
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
once_cell = "1.20"

[dev-dependencies]
pretty_assertions = "1.4"
