[package]
name = "gittera-query"
version = "0.1.0"
edition = "2021"

[dependencies]
gittera-parser = { path = "../parser" }
gittera-analyzer = { path = "../analyzer" }

# Parsing GQL
nom = "7.1"
logos = "0.14"

# Utilities
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
once_cell = "1.20"
regex = "1.10"

[dev-dependencies]
pretty_assertions = "1.4"
